--- a/doc/插件编写.md
+++ b/doc/插件编写.md
@@ -8,7 +8,10 @@
 
 ```
 
-  ├─tutorial
-  ├─tutorial_plugins
-
+├── tutorial
+└── tutorial_plugins
+    ├── egg-born-cache
+    ├── egg-born-cache-redis
+    ├── egg-born-core
+    └── egg-ts
 ```
